examples/test/testpolicy9867.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9867
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key44: value6
      key6: value21
      key35: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value36
          key35: value19
      podSelector:
        matchLabels:
          key1: value35
          key20: value32
